--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "re-store",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://biguhotape.github.io/Re-store/",
+  "homepage": "https://biguhotape.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":  "npm build",
+    "predeploy":  "npm run-script build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
